Hacky solution to resolve losing user input on dropdowns due to small pixel gap.

--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -410,6 +410,17 @@ pre {
         }
       }
 
+      // Small hack to fix scrolling issue
+      &:after {
+        content: "";
+        position: absolute;
+        top: 35px; left: -2px;
+        width: 120px; height: 1px;
+        background-color: red;
+        z-index: 90;
+        opacity: 0;
+      }
+
       .subitems {
         position: absolute;
         top: 36px; left: -2px;
